correction version mobile menu

--- a/mota-perso/assets/styles/_header.scss
+++ b/mota-perso/assets/styles/_header.scss
@@ -15,7 +15,7 @@ $color-border-hover: #215AFF;
 
 body {
    font-family: 'Space mono', sans-serif;
-   font-family: 'Poppins', sans-serif;
+   /*font-family: 'Poppins', sans-serif;*/
    width: 100%;
    margin: auto;
    max-width: 1440px;
