--- a/mota-perso/assets/styles/_media-queries.scss
+++ b/mota-perso/assets/styles/_media-queries.scss
@@ -82,6 +82,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 #images-block {
     margin-bottom: 40px;
