--- a/mota-perso/assets/styles/_single-page.scss
+++ b/mota-perso/assets/styles/_single-page.scss
@@ -2,6 +2,7 @@
 * Toute la partie SINGLE PAGE en 3 sections
 *
 */
+
             /** 1ère section  **/
 .container-single-page {
     max-width: 1143px;
@@ -21,11 +22,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    font-family: 'Space mono', sans-serif;
     margin-left: 40px;
     & h2 {
         text-transform: uppercase;
         font-style: italic;
         font-weight: lighter;
+        font-family: 'Space mono', sans-serif;
         font-size: 60px;
         width: 50%;
         line-height: 50px;
@@ -142,4 +145,5 @@
     justify-content: center;
     position: relative;
     gap: 20px;
+    margin-bottom: 20px;
 }
