--- a/mota-perso/assets/styles/mota.css
+++ b/mota-perso/assets/styles/mota.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 /* Import de la font Space mono */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Import de la font Poppins */
 @keyframes modale {
   0% {
@@ -28,7 +28,7 @@
 */
 body {
   font-family: "Space mono", sans-serif;
-  font-family: "Poppins", sans-serif;
+  /*font-family: 'Poppins', sans-serif;*/
   width: 100%;
   margin: auto;
   max-width: 1440px;
@@ -259,12 +259,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  font-family: "Space mono", sans-serif;
   margin-left: 40px;
 }
 .details h2 {
   text-transform: uppercase;
   font-style: italic;
   font-weight: lighter;
+  font-family: "Space mono", sans-serif;
   font-size: 60px;
   width: 50%;
   line-height: 50px;
@@ -394,6 +396,7 @@ body {
   justify-content: center;
   position: relative;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 /*
@@ -871,6 +874,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
   }
   #images-block {
     margin-bottom: 40px;
@@ -1094,11 +1098,12 @@ body {
   animation: menu 1s ease-in-out forwards;
   opacity: 0;
 }
-.open-menu #primary-menu button {
+.open-menu #primary-menu p {
   background-color: #E00000;
   font-size: 44px;
   color: white;
 }
 .open-menu #primary-menu a {
   color: white;
+  width: 100%;
 }/*# sourceMappingURL=mota.css.map */
